--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "daisyui": "^5.1.25",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "typeit": "^8.8.7",
+    "typeit-react": "^2.7.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
