--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.544.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
