--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.13.1",
     "daisyui": "^5.1.25",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
@@ -29,6 +30,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "typeit": "^8.8.7",
     "typeit-react": "^2.7.8"
   },
