--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.13.1",
     "daisyui": "^5.1.25",
+    "dayjs": "^1.11.19",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
@@ -32,6 +33,8 @@
     "react-router-dom": "^7.9.3",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "typeit": "^8.8.7",
     "typeit-react": "^2.7.8"
   },
