--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 VITE_CLOUD_NAME='ddkkkq2pm'
 CLOUDINARY_API_KEY='491566167139259'
 CLOUDINARY_API_SECRET='fxDtSqdgQS6_Rv-cV4XJsHQyRvQ'
+UPLOAD_ASSET_NAME='Remarket'
